--- a/section-06/code/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/section-06/code/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,9 +1,9 @@
-<form>
+<form (ngSubmit)="onSubmit()">
   <app-control label="Title">
-    <input name="title" id="title" />
+    <input name="title" id="title" [(ngModel)]="title" />
   </app-control>
   <app-control label="Request">
-    <textarea name="request" id="request" rows="3"></textarea>
+    <textarea name="request" id="request" rows="3" [(ngModel)]="request"></textarea>
   </app-control>
   <p>
     <button appButton>
